--- a/package.json
+++ b/package.json
@@ -1,18 +1,36 @@
 {
   "name": "idle-skat",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.html",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "version": "0.0.1",
+  "description": "An idle game for the Danish SKAT agency",
   "author": "Putaitu Productions",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.18.0",
-    "babel-loader": "^6.2.7",
-    "babel-preset-env": "^1.6.1",
-    "file-loader": "^0.10.1",
-    "webpack": "^1.13.3"
+    "autoprefixer": "^7.1.6",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "css-loader": "^0.28.7",
+    "es6-promise": "^4.1.1",
+    "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.8",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "stylelint": "^8.2.0",
+    "stylelint-config-standard": "^17.0.0",
+    "stylelint-selector-bem-pattern": "^2.0.0",
+    "stylelint-webpack-plugin": "^0.9.0",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.3"
+  },
+  "keywords": [
+    "babel",
+    "boilerplate",
+    "es6",
+    "sass",
+    "starter-kit",
+    "workflow",
+    "webpack"
+  ],
+  "dependencies": {
+    "extract-text-webpack-plugin": "^3.0.1"
   }
 }
