--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "autoprefixer": "^7.1.6",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "css-loader": "^0.28.7",
     "es6-promise": "^4.1.1",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.8",
+    "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "stylelint": "^8.2.0",
